# cci

./: .gitignore  CLAUDE.md  README.md  main.py  mkdocs.yml  pyproject.toml  test_install.sh
.cci/: config.toml
.claude/: hooks.json  settings.local.json
.claude/agents/: architect.md  doc-optimizer.md  documenter.md  implementer.md  performance-optimizer.md  project-review-analyzer.md  project-review-coordinator.md  project-review-validator.md  security-auditor.md  tester.md  ui-designer.md  workflow-analyzer.md  workflow-validator.md
.claude/commands/: cci-implement.md  cci-security.md  cci-setup.md  cci-smart-commit.md  cci-status.md  cci-test.md  cci-uat.md  project-review.md  resolve-reviews.md  review-project.md
.claude/examples/: cci-implement-usage.md
docs/: ISSUES.md  PROGRESS.md  STATUS.md  TESTING.md  UAT_READY.md  index.md
docs/development/: CURRENT_SESSION_NOTES.md
docs/getting-started/: installation.md  quickstart.md
docs/reviews/: 2025-01-15-review.md  2025-01-16-project-review.md  2025-09-16-comparison-review.md  2025-09-16-final-resolution.md  2025-09-16-project-review.md  2025-09-16-resolution-report.md  2025-09-16-resolution-status.md
docs/user-guide/: overview.md
docs/workflows/: project-review.md
src/cci/: __init__.py  __main__.py  cli.py  config.py
src/cci/core/: __init__.py  prompt.py  (+2 more)
tests/: __init__.py  conftest.py
tests/unit/: test_claude_code_integration.py  test_cli_commands.py  test_config.py  test_config_utils.py  test_file_utils.py  test_git_utils.py  test_models.py  test_registry.py  test_tui_screens.py
(+19 files in other folders)
