[project]
name = "cci"
version = "0.1.0"
description = "Claude Code IDE - Git worktree-first IDE with prompt-driven patch workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "textual>=0.47.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "gitpython>=3.1.40",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "chardet>=5.0.0",
    "anthropic>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[project.scripts]
cci = "cci.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cci --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cci"]
omit = ["*/tests/*", "*/__init__.py"]
